gpgconf parsing of VERSION file broken
Closed, ResolvedPublic

Assigned To
Authored By
ebo
Jan 4 2024, 2:50 PM

Description

gpgconf -X no longer shows the GnuPG VSD Version in line 4, instead "?Kleopatra"

> gpgconf -X
### Dump of all standard config files
### GnuPG 2.2.42 (6f5c72a2b)
### MingW32
### ?Kleopatra]
### Windows 10.0 build 19045
### Libgcrypt 1.8.11
### GpgRT 1.47
### Codepages: 65001 1252 437
###

Details

Version
VSD 3.2.0