gpgconf: Adjust -X command for the new VERSION file format

* tools/gpgconf.c (show_version_gnupg): Read and parse the entire
VERSION file.
--

GnuPG-bug-id: 6918